<resources>
    <string name="app_name">Deltatask1</string>
    <string name="Hacker">Hacker</string>
    <string name="Hackerpp">Hacker++</string>
    <string name="go">Go</string>
    <string name="eg_74">Eg.74</string>
    <string name="invalidnumber">Enter a number greater than 2</string>
    <string name="invalidnumber2">Enter a number less than 2147483647</string>
    <string name="highscore"> "HIGH : \n %d"</string>retru
    <string name="timer"> "TIMER \n %1.3f"</string>
    <string name="currentscore"> "CURRENT : \n %d"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_over">Game Over</string>
    <string name="reload">reload</string>
    <string name="normal">Normal</string>
    <string name="hacker">Hacker</string>
    <string name="hackerpp">Hacker++</string>
    <string name="color">color</string>
    <string name="select_mode">SELECT MODE</string>
    <string name="enter">ENTER :</string>
    <string name="options">OPTIONS :</string>
    <string name="next">NEXT</string>
    <string name="menu">MENU</string>
    <string name="info">-By S Sujith Kumar \n 108119126 </string>
    <string name="retry">RETRY</string>
    <string name="exit">EXIT</string>
    <string name="delta_task_1">Delta Task 1</string>

</resources>
